added landscape layout and link to installation instructions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,20 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 20
     buildToolsVersion "20.0.0"
-
     defaultConfig {
-        applicationId "ch.opengis.qfieldkarma"
+        applicationId 'ch.opengis.qfieldkarmaedition'
         minSdkVersion 8
         targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName '0.3'
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
