--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ch.opengis.qfieldkarma" >
+    package="ch.opengis.qfieldkarmaedition" >
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:screenOrientation="portrait"
-            android:name=".Thanks"
+            android:name="ch.opengis.qfieldkarmaedition.Thanks"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
